--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/AddCasWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/AddCasWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OsnovnaSkolaUI.Views"
         mc:Ignorable="d"
-         Title="Novi Cas" Height="489.491" Width="490" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+         Title="Novi Cas" Height="692" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="FocusTextBox" TargetType="Grid">
             <Style.Triggers>
@@ -16,28 +16,80 @@
         </Style>
     </Window.Resources>
 
-    <Grid x:Name="LoginGrid" Background="Black" Margin="0,0,0,-1" Style="{StaticResource FocusTextBox}">
+    <Grid x:Name="LoginGrid" Background="Black" Style="{StaticResource FocusTextBox}">
         <Label Content="Novi Cas" HorizontalContentAlignment="Center" Height="66" Margin="21,10,23,0" VerticalAlignment="Top"  FontSize="26" FontFamily="Segoe UI" Foreground="#FFFBFB9F"/>
 
-        <Label Content="Pocetak:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="34" Margin="113,193,0,0" VerticalAlignment="Top" Width="244" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="20" />
-        <TextBox x:Name="ImeBox" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Text="{Binding Pocetak, UpdateSourceTrigger=PropertyChanged}"  FontFamily="Khmer UI" FontSize="20" TextWrapping="Wrap" Width="244" Margin="113,232,0,0" Background="#FF2E2E2E" BorderBrush="#FF282829" Foreground="#FFFBFB9F" Height="39" VerticalAlignment="Top">
+        <Label Content="Pocetak:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="34" Margin="275,188,0,0" VerticalAlignment="Top" Width="244" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="20" />
+        <TextBox x:Name="ImeBox" HorizontalAlignment="Left" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Text="{Binding Pocetak, UpdateSourceTrigger=PropertyChanged}"  FontFamily="Khmer UI" FontSize="20" TextWrapping="Wrap" Width="244" Margin="275,232,0,0" Background="#FF2E2E2E" BorderBrush="#FF282829" Foreground="#FFFBFB9F" Height="39" VerticalAlignment="Top">
             <TextBox.InputBindings>
                 <KeyBinding Command="{Binding AddCasCommand}" Key="Enter"/>
             </TextBox.InputBindings>
         </TextBox>
-        <Label Content="{Binding PocetakError, UpdateSourceTrigger=PropertyChanged}" Name="imeError" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="21,276,0,266" Width="440" FontFamily="Segoe UI" Foreground="red" FontSize="16" />
+        <Label Content="{Binding PocetakError, UpdateSourceTrigger=PropertyChanged}" Name="imeError" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="169,276,0,347" Width="440" FontFamily="Segoe UI" Foreground="red" FontSize="16" />
 
 
-        <Label Content="Datum odrzavanja:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="113,76,0,0" VerticalAlignment="Top" Width="244" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="20" />
+        <DataGrid ItemsSource="{Binding Odeljenja, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Visibility="{Binding Modification}"  HorizontalAlignment="Left" Height="194" Margin="21,321,0,0" VerticalAlignment="Top" Width="750" SelectedItem="{Binding SelectedOdeljenje}" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Id" TextBlock.TextAlignment="Center" Binding="{Binding Id_odeljenja}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn Header="Razred" TextBlock.TextAlignment="Center" Binding="{Binding razred}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+
+                <DataGridTextColumn Header="Razredni" TextBlock.TextAlignment="Center" Binding="{Binding Razredni}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+                <!--<DataGridTemplateColumn Header="Dodaj razrednog">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.AddRazrednogCommand}" CommandParameter="{Binding}">Razredni</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                <DataGridTemplateColumn Header="Dodaj nastavnika/učitelja">
+                    <DataGridTemplateColumn.CellTemplate >
+                        <DataTemplate >
+                            <Button  Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.AddNastavnikCommand}" CommandParameter="{Binding}">Nastavnik/učitelj</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>-->
+
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Label Content="Datum odrzavanja:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="275,81,0,0" VerticalAlignment="Top" Width="244" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="20" />
         <!--<DatePicker SelectedDate="{Binding SelectedDatum}" HorizontalAlignment="Left" Background="#FF2E2E2E" BorderThickness="1" BorderBrush="#FF282829" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="34" Width="243" Foreground="#FFFBFB9F" Margin="114,261,0,169">
 
         </DatePicker>-->
-        <DatePicker SelectedDate="{Binding SelectedDatum}"  Margin="113,119,127,307"></DatePicker>
+        <DatePicker SelectedDate="{Binding SelectedDatum}"  Margin="113,119,127,514"></DatePicker>
 
-        <Label Content="{Binding DateError, UpdateSourceTrigger=PropertyChanged}" Name="prezimeError" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="34" Margin="21,154,0,0" VerticalAlignment="Top" Width="440" FontFamily="Segoe UI" Foreground="red" FontSize="16" />
+        <Label Content="{Binding DateError, UpdateSourceTrigger=PropertyChanged}" Name="prezimeError" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="34" Margin="169,149,0,0" VerticalAlignment="Top" Width="440" FontFamily="Segoe UI" Foreground="red" FontSize="16" />
 
-        <Button  Content="{Binding ButtonContent}" IsDefault="True" Command="{Binding AddCasCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="130" Margin="169,371,0,0" Height="48" RenderTransformOrigin="0.769,0.381"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
-        <Button  Content="Obrisi" Visibility="{Binding DeletionEnabled}" IsDefault="True" Command="{Binding DeleteCasCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="130" Margin="169,318,0,0" Height="48" RenderTransformOrigin="0.769,0.381"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
+        <Button  Content="{Binding ButtonContent}" IsDefault="True" Command="{Binding AddCasCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="130" Margin="331,605,0,0" Height="48" RenderTransformOrigin="0.503,0.458"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
+        <Button  Content="Obrisi" Visibility="{Binding DeletionEnabled}" IsDefault="True" Command="{Binding DeleteCasCommand}" HorizontalAlignment="Left"  FontSize="24" VerticalAlignment="Top" Width="130" Margin="331,557,0,0" Height="48" RenderTransformOrigin="0.5,0.514"  FontFamily="Segoe UI" Background="Transparent" BorderBrush="White" Foreground="#FFFBFB9F" FontWeight="Bold"/>
 
     </Grid>
 </Window>
