--- a/OsnovnaSkola/OsnovnaSkolaUI/Views/RasporedCasovaWindow.xaml
+++ b/OsnovnaSkola/OsnovnaSkolaUI/Views/RasporedCasovaWindow.xaml
@@ -5,8 +5,83 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OsnovnaSkolaUI.Views"
         mc:Ignorable="d"
-        Title="RasporedCasovaWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="RasporedCasovaWindow" Height="662" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+
+    <Grid x:Name="LoginGrid" Background="Black" >
+        <Label Content="Novi Cas" HorizontalContentAlignment="Center" Height="66" Margin="21,10,23,0" VerticalAlignment="Top"  FontSize="26" FontFamily="Segoe UI" Foreground="#FFFBFB9F"/>
+
+
+        <DataGrid ItemsSource="{Binding Casovi, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"  HorizontalAlignment="Left" Height="208" Margin="21,411,0,0" VerticalAlignment="Top" Width="750" SelectedItem="{Binding SelectedCas}" ColumnWidth="*" AutoGenerateColumns="False" IsReadOnly="True">
+            <DataGrid.Columns>
+
+                <DataGridTextColumn Header="Datum" TextBlock.TextAlignment="Center" Binding="{Binding datum, StringFormat=\{0:dd.MM.yyyy\}}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn Header="Pocetak" TextBlock.TextAlignment="Center" Binding="{Binding pocetak}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn Header="Učionica" TextBlock.TextAlignment="Center" Binding="{Binding ucionica}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn Header="Oblast" TextBlock.TextAlignment="Center" Binding="{Binding naziv_oblasti}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+                <DataGridTextColumn Header="Odeljenje" TextBlock.TextAlignment="Center" Binding="{Binding odeljenje}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="TextWrapping" Value="Wrap" />
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+
+                <!--<DataGridTemplateColumn Header="Izmena/Brisanje">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.ChangeCasCommand}" CommandParameter="{Binding}">Izmeni/Obrisi</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>-->
+
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <Label Content="Datum odrzavanja:" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Height="38" Margin="275,81,0,0" VerticalAlignment="Top" Width="244" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="20" />
+        <!--<DatePicker SelectedDate="{Binding SelectedDatum}" HorizontalAlignment="Left" Background="#FF2E2E2E" BorderThickness="1" BorderBrush="#FF282829" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Height="34" Width="243" Foreground="#FFFBFB9F" Margin="114,261,0,169">
+
+        </DatePicker>-->
+        <DatePicker SelectedDate="{Binding SelectedDatum}"  Margin="113,119,127,476"></DatePicker>
+
+        <Label Content="{Binding RasporedError, UpdateSourceTrigger=PropertyChanged}" Name="prezimeError" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="104" Margin="113,244,0,0" VerticalAlignment="Top" Width="554" FontFamily="Segoe UI" Foreground="#FFFBFB9F" FontSize="20" />
+        <Button Content="Proveri" HorizontalAlignment="Left" Command="{Binding CheckRasporedCommand}" Visibility="{Binding IsAdmin}" Height="77" Margin="294,162,0,0" VerticalAlignment="Top" Width="194" Foreground="#FFFBFB9F" Background="Transparent"  FontFamily="Segoe UI" BorderBrush="White" FontSize="22" />
     </Grid>
 </Window>
